allow access to core components during capability registration ()